--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h3{
 }
 .mission-area{
     background-color: lightcoral;
-    width: 385px;
+    width: 390px;
     height: 400px;
     border-radius: 20px;
 }
@@ -64,7 +64,7 @@ h3{
 }
 .vision-area{
     background-color: khaki;
-    width: 385px;
+    width: 390px;
     height: 400px;
     border-radius: 20px;  
 }
@@ -75,7 +75,7 @@ h3{
 }
 .goals-area{
     background-color: darksalmon;
-    width: 385px;
+    width: 390px;
     height: 400px;
     border-bottom: 20px;
     border-radius: 20px;   
@@ -88,19 +88,34 @@ h3{
 .details-text{
     padding-left: 25px;
 }
-#bottom-section{
-    display: flex;    
+#bottom-section-1{
+    display: flex;
+    margin-top: 5%;
+    margin-right: 10%;
 }
 .bottom-tittle{
     font-size: 35px; 
 }
-.development-details{
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 5%;
-    width: 100%;
-    font-weight: 700;   
+.development-details-1 img{
+    width: 120%;
+    margin-left: 39%;
 }
-.development-details img{
-    width: 70%;
+.development-details-2{
+    margin-left: 20%; 
+}
+#bottom-section-2{
+    display: flex;
+    margin-top: 3%;
+    margin-right: 8%;
+}
+.development-details-3{
+    width: 100%;
+    margin-left: 11%;
+}
+.development-details-4{
+    margin-right: 6%;
+}
+.development-details-4 img{
+    width: 80%;
+    margin-left: 30%;
 }
